# SPDX-License-Identifier: BSD-3-Clause
# Copyright 2022 Intel Corporation

option('enable_asan', type: 'boolean', value: false, description: 'enable/disable address sanitizer, debug usage only')

option('enable_tap', type: 'boolean', value: false, description: 'enable/disable Windows TAP')
option('dpdk_root_dir', type: 'string', value: '..\dpdk', description: 'dpdk source code root dir, for Windows')